[package]
name = "corrosion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corrosion-base = { path="corrosion-base", version="0.1.0" }
corrosion-clif = { path="corrosion-clif", version="0.1.0" }

[workspace]
members = [
    "java-corrosion",
    "corrosion-base",
    "corrosion-clif"
]

[build.release]
lto=true